--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
+    <meta charset="utf-8">
+    <title>first-project</title>
     <body>
         <h1>Hello world!</h1>
     </body>
